new version 0.4.0-SNAPSHOT; first steps for gui; started with javadoc;

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>burstcoin</groupId>
     <artifactId>burstcoin-jminer</artifactId>
-    <version>0.3.6-RELEASE</version>
+    <version>0.4.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>burstcoin-jminer</name>
@@ -78,9 +78,9 @@
             <resource>
                 <directory>src/main/java</directory>
                 <includes>
-                    <!--<include>burstcoin/jminer/gui/**/*.fxml</include>-->
-                    <!--<include>burstcoin/jminer/gui/**/*.css</include>-->
-                    <!--<include>burstcoin/jminer/gui/**/*.jpg</include>-->
+                    <include>burstcoin/jminer/gui/**/*.fxml</include>
+                    <include>burstcoin/jminer/gui/**/*.css</include>
+                    <include>burstcoin/jminer/gui/**/*.jpg</include>
                     <include>burstcoin/jminer/core/**/*.cl</include>
                 </includes>
             </resource>
