updated some lib versions; plotFiles can be listed on start by new property; fixed: #3 'incorrect size info of plots, GB and TB are decimal, calculation is hex'; started: #1 'better handling/info on fast blocks';

--- a/jminer.default.properties
+++ b/jminer.default.properties
@@ -23,9 +23,12 @@
 # list of plot paths separated with , e.g. D:/,C:/,E:/plots,F:/plots (in one line)
 # the miner will treat every path as 'physical' drive and use one thread for it
 # -----------------------------------------------------------------------------------
+# (required)
 plotPaths=D:/,C:/,E:/plots,F:/plots
-# 'true' would check 'plotPaths' for changed plot files on every round (default:false)
+# optional (default:false) - 'true' would check 'plotPaths' for changed plot files on every round
 scanPathsEveryRound=false
+# optional (default:false) - list all plotFiles on start, e.g. to use https://bchain.info/BURST/tools/overlap
+listPlotFiles=false
 
 # -----------------------------------------------------------------------------------
 # - MINING MODE ---------------------------------------------------------------------
@@ -150,8 +153,11 @@ chunkPartNonces=
 # interval of asking wallet/pool for mining info, to check for new block (default:2000) - 2 seconds
 refreshInterval=2000
 # timeout for all network requests (default:6000) - 6 seconds
-connectionTimeout=6000
+connectionTimeout=12000
 # number of logged read progress infos per round
 readProgressPerRound=9
+
+# (default:true) switch between decimal units: TB/GB/MB (divided by 1000), or binary units TiB/GiB/MiB (divided by 1024) - https://en.wikipedia.org/wiki/Byte
+sizeUnitsDecimal=true
 
 
