#5 add optional plot-drive info output ; #4 eff.read is more likely the average read speed; fixed reader and network thread prio from low to normal; bugfixes in handling ReaderStoppedEvent;

--- a/jminer.default.properties
+++ b/jminer.default.properties
@@ -158,6 +158,9 @@ connectionTimeout=12000
 readProgressPerRound=9
 
 # (default:true) switch between decimal units: TB/GB/MB (divided by 1000), or binary units TiB/GiB/MiB (divided by 1024) - https://en.wikipedia.org/wiki/Byte
-sizeUnitsDecimal=true
+byteUnitDecimal=true
+
+# (default:false) shows info about every drive on finish reading it, useful to find the slow ones ...
+showDriveInfo=false
 
 
