#8 make memory usage more effective and adjustable  #6 it may happen that finish log is triggered too early  first steps for #7 better handling of connectionTimeout especially on commit

--- a/jminer.default.properties
+++ b/jminer.default.properties
@@ -163,4 +163,7 @@ byteUnitDecimal=true
 # (default:false) shows info about every drive on finish reading it, useful to find the slow ones ...
 showDriveInfo=false
 
+# (default:0) 0 -> number of plotPaths is taken (one thread per drive) this is recommend, choosing a lower number can be useful on memory issues. (a higher number is useless)
+readerThreads=0
+
 
