--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,7 @@
                 <directory>src/main/resources</directory>
                 <includes>
                     <include>**/*.txt</include>
+                    <include>**/*.properties</include>
                 </includes>
             </resource>
         </resources>
