#9 write console output to logfile; changed version to 0.4.2-SNAPSHOT; updated copyright and other cleanup; step forward with description in jminer.default.properties; removed unused sources, some bugfixes;

--- a/jminer.default.properties
+++ b/jminer.default.properties
@@ -1,22 +1,31 @@
 # -----------------------------------------------------------------------------------
-# - BURST JMINER ------------- THIS IS EXPERIMENTAL SOFTWARE, USE ON YOUR OWN RISK! -
+# - BURSTCOIN JMINER --------- THIS IS EXPERIMENTAL SOFTWARE, USE ON YOUR OWN RISK! -
 # -----------------------------------------------------------------------------------
-#
-# JMiner is a POC miner with GPU support for Burstcoin (BURST)
+# jminer is a PoC (Proof of Capacity) miner with GPU support for Burstcoin (BURST)
+# (openCL will also work with CPU in needed)
 #
 # Requirements:
-# - Java8 + openCL
-#
+# - Java8 (64bit recommend to use more memory)
+# - openCL 1.2 or 2.0
 #
 # PLEASE DONATE
 #
-# JMiner would not be possible without openCL kernels and java code provided by burstDev,
-# he really deserves some tips for that!
-# BurstDev: BURST-QHCJ-9HB5-PTGC-5Q8J9
+# jminer would not be possible without openCL kernels and java code provided by 'burstDev', he really deserves some tips for that!
+# BURST-QHCJ-9HB5-PTGC-5Q8J9
 #
-# Feel free to support future development.
+# Feel free to support future development of mining engine ...
 # BURST-LUXE-RED2-G6JW-H4HG5
-#
+# -----------------------------------------------------------------------------------
+
+
+
+# -----------------------------------------------------------------------------------
+# NOTICE: your 'jminer.properties' hasn't got to contain all properties listed here
+#         as long there is a default/fallback defined, mentioned in here.
+# -----------------------------------------------------------------------------------
+
+
+
 # -----------------------------------------------------------------------------------
 # - PLOT-FILES ----------------------------------------------------------------------
 # -----------------------------------------------------------------------------------
@@ -129,11 +138,42 @@ deviceId=
 # -----------------------------------------------------------------------------------
 # - MINING ENGINE -------------------------------------------------------------------
 # -----------------------------------------------------------------------------------
-# restartInterval - the mining engine can restart itself, specify the interval in minutes!
-# (default:240)     without issues, just set it to a high number, to avoid restarting
-#                   NOTICE: on restart the last block will be mined again.
+# restartInterval    - the mining engine can restart itself, specify the interval in minutes!
+# (default:240)        without issues, just set it to a high number, to avoid restarting
+#                      NOTICE: on restart the last block will be mined again.
 #
+# refreshInterval    - interval of asking wallet/pool for mining info (in ms),
+# (default:2000)       to check for new block
 #
+# connectionTimeout  - increase the 'connectionTimeout' on network problems.
+# (default:12000)      this timeout is used for all network requests.
+#                      if you use pool or online-wallet, the 12 sec. default may
+#                      cause timeout on committing nonces or getting mining info etc.
+# -----------------------------------------------------------------------------------
+restartInterval=
+
+refreshInterval=2000
+connectionTimeout=12000
+
+# -----------------------------------------------------------------------------------
+# - MINING ENGINE - APPEARANCE ------------------------------------------------------
+# -----------------------------------------------------------------------------------
+# readProgressPerRound - defines how often the mining progress is shown per round
+# (default:9)            thats the 'xx% done ...' info.
+#
+# byteUnitDecimal      - switch between decimal units (true): TB/GB/MB (divided by 1000),
+# (default:true)         or binary units (false) TiB/GiB/MiB (divided by 1024) - https://en.wikipedia.org/wiki/Byte
+#
+# showDriveInfo        - set this to 'true' to show info about every drive on finish reading it,
+# (default:false)        this is useful to find the slow ones ... can help to optimize your setup.
+# -----------------------------------------------------------------------------------
+readProgressPerRound=
+byteUnitDecimal=
+showDriveInfo=
+
+# -----------------------------------------------------------------------------------
+# - MINING ENGINE - MEMORY USAGE ----------------------------------------------------
+# -----------------------------------------------------------------------------------
 # chunkPartNonces - staggerSize defines number of nonces per chunk.
 # (default:320000)  the miner will split chunks in smaller pieces called chunkParts.
 #                   this makes sense, to save memory and optimize speed.
@@ -146,24 +186,12 @@ deviceId=
 #                           without 'optDevPool' (witch is not implemented, yet)
 #                           consider using low chunkPartNonces size, to commit more.
 #                           (guess, there will not be multiple dl below target in small chunkPart)
+#
+# readerThreads   - normally '0' means, the miner takes one thread per drive (plotPath) this is recommend.
+# (default:0)       choosing a other number of 'readerThreads' can be useful on memory issues.
+#                   For example, if you mine on 4 drives (plotPaths), you can reduce the memory usage
+#                   by setting 'readerThreads=2', this will reduce mining speed but save memory.
 # -----------------------------------------------------------------------------------
-restartInterval=
 chunkPartNonces=
-
-# interval of asking wallet/pool for mining info, to check for new block (default:2000) - 2 seconds
-refreshInterval=2000
-# timeout for all network requests (default:6000) - 6 seconds
-connectionTimeout=12000
-# number of logged read progress infos per round
-readProgressPerRound=9
-
-# (default:true) switch between decimal units: TB/GB/MB (divided by 1000), or binary units TiB/GiB/MiB (divided by 1024) - https://en.wikipedia.org/wiki/Byte
-byteUnitDecimal=true
-
-# (default:false) shows info about every drive on finish reading it, useful to find the slow ones ...
-showDriveInfo=false
-
-# (default:0) 0 -> number of plotPaths is taken (one thread per drive) this is recommend, choosing a lower number can be useful on memory issues. (a higher number is useless)
-readerThreads=0
-
+readerThreads=
 
