--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 logging.level.burstcoin.jminer.core=INFO
 logging.level.org.eclipse.jetty.util.log=WARN
 logging.level.org.springframework=WARN
+logging.file=jminer.logs.txt
