new version 0.4.2-RELEASE; some miner bugfixes and cleanup; changed default for scanPathsEveryRound to true;

--- a/jminer.default.properties
+++ b/jminer.default.properties
@@ -6,7 +6,7 @@
 #
 # Requirements:
 # - Java8 (64bit recommend to use more memory)
-# - openCL 1.2 or 2.0
+# - openCL 1.2 or 2.0 (use jminer 0.3.6 for openCL 1.1)
 #
 # PLEASE DONATE
 #
@@ -29,15 +29,18 @@
 # -----------------------------------------------------------------------------------
 # - PLOT-FILES ----------------------------------------------------------------------
 # -----------------------------------------------------------------------------------
-# list of plot paths separated with , e.g. D:/,C:/,E:/plots,F:/plots (in one line)
-# the miner will treat every path as 'physical' drive and use one thread for it
+# plotPaths           - list of plot paths separated with , e.g. D:/,C:/,E:/plots,F:/plots (in one line)
+# (required)            the miner will treat every path as 'physical' drive and use one thread for it
+#
+# scanPathsEveryRound - optional 'true' will check 'plotPaths' for changed plot files on every round
+# (default:true)        'false' will check only on start/restart
+#
+# listPlotFiles       - optional ... list all plotFiles on start, e.g. to use https://bchain.info/BURST/tools/overlap
+# (default:false)
 # -----------------------------------------------------------------------------------
-# (required)
 plotPaths=D:/,C:/,E:/plots,F:/plots
-# optional (default:false) - 'true' would check 'plotPaths' for changed plot files on every round
-scanPathsEveryRound=false
-# optional (default:false) - list all plotFiles on start, e.g. to use https://bchain.info/BURST/tools/overlap
-listPlotFiles=false
+scanPathsEveryRound=
+listPlotFiles=
 
 # -----------------------------------------------------------------------------------
 # - MINING MODE ---------------------------------------------------------------------
@@ -45,7 +48,7 @@ listPlotFiles=false
 # poolMining             - 'true' for pool mining, 'false' for solo mining.
 # (default:true)            ensure to configure the chosen mining-mode below.
 # -----------------------------------------------------------------------------------
-poolMining=true
+poolMining=
 
 # -----------------------------------------------------------------------------------
 # - MINING MODE - POOL ---------------------------------- ONLY NEEDED 4 POOL MINING -
