fixed 'walletServer' npe; added info for online wallet;

--- a/jminer.default.properties
+++ b/jminer.default.properties
@@ -66,6 +66,7 @@ poolMining=
 # walletServer            - define local or online wallet, to receive and show last winner!
 # (optional)                if empty, winner feature will be just disabled.
 #                           format is inclusive protocol and port e.g. 'http://localhost:8125'
+#                           online use e.g. 'https://wallet.burst-team.us:8125'
 #
 # winnerRetriesOnAsync    - number of retries to get winner from walletServer
 # (default:4)
@@ -87,7 +88,7 @@ numericAccountId=xxxxxxxxxxxxxxx
 poolServer=http://pool.com
 
 # Winner
-walletServer=
+walletServer=https://wallet.burst-team.us:8125
 winnerRetriesOnAsync=
 winnerRetryIntervalInMs=
 
