#13 support all available openCL devices #14 check for openCL support on startup, list available platforms/devices #15 prevent wallet from stuck on solo-mining e.g. on slow blocks/no open gui #16 writing logfile as optional feature #17 stop using jocl 0.2.0 as long as there is no performance improvement #19 provide info about 'incomplete' plot-files #20 enable selection logLevel DEBUG for users that are interested in more details

--- a/jminer.default.properties
+++ b/jminer.default.properties
@@ -6,11 +6,12 @@
 #
 # Requirements:
 # - Java8 (64bit recommend to use more memory)
-# - openCL 1.2 or 2.0 (use jminer 0.3.6 for openCL 1.1)
+# - openCL
 #
 # PLEASE DONATE
 #
-# jminer would not be possible without openCL kernels and java code provided by 'burstDev', he really deserves some tips for that!
+# jminer would not be possible without openCL kernels and java code provided by 'burstDev',
+# he really deserves some tips for that!
 # BURST-QHCJ-9HB5-PTGC-5Q8J9
 #
 # Feel free to support future development of mining engine ...
@@ -102,10 +103,6 @@ optDevPool=false
 # -----------------------------------------------------------------------------------
 # - MINING MODE - SOLO ---------------------------------- ONLY NEEDED 4 SOLO MINING -
 # -----------------------------------------------------------------------------------
-#
-# Solo means you send your PASS on commit results!
-# DO NOT try to use a online wallet or pool as Server!
-#
 # soloServer              - WARN! soloServer should be http://localhost:8125 or http://127.0.0.1:8125
 # (default:                 Solo means you send your PASS on commit results!
 # http://localhost:8125)    DO NOT try to use a online wallet or pool as Server!
@@ -121,11 +118,9 @@ passPhrase=xxxxxxxxxxxxxx
 targetDeadline=
 
 # -----------------------------------------------------------------------------------
-# - GPU -----------------------------------------------------------------------------
+# - OpenCL -----------------------------------------------------------------------------
 # -----------------------------------------------------------------------------------
-# the miner was tested on AMD and NVIDIA GPUs, feedback about CPU and unsupported GPUs is welcome
-#
-# the miner uses openCL for most of the mining calculations, ensure it is setup correctly.
+# The miner uses openCL for most of the mining calculations, ensure it is setup correctly.
 # Instructions can be found e.g. here (thanks cryo):
 # https://github.com/bhamon/gpuPlotGenerator/blob/master/README.md
 # You could also use that instruction to find your platformId and deviceId if needed.
@@ -149,12 +144,25 @@ deviceId=
 # (default:12000)      this timeout is used for all network requests.
 #                      if you use pool or online-wallet, the 12 sec. default may
 #                      cause timeout on committing nonces or getting mining info etc.
+#
+# debug              - setting 'debug' to true will log additional information of the mining process,
+# (default:false)      that are not related to mining, but to miner internals.
+#
+# writeLogFile       - setting 'writeLogFile' to 'true' will write all logs from console to a file, too.
+# (default:false)      the name of that file can be specified by 'logFilePath'.
+#
+# logFilePath        - path (filename and optional directory, relative to miner location)
+# (default:log/jminer.log.txt)
 # -----------------------------------------------------------------------------------
 refreshInterval=2000
 connectionTimeout=12000
 
+debug=
+writeLogFile=
+logFilePath=
+
 # -----------------------------------------------------------------------------------
-# - MINING ENGINE - APPEARANCE ------------------------------------------------------
+# - MINING ENGINE - APPEARANCE / BEHAVIOR -------------------------------------------
 # -----------------------------------------------------------------------------------
 # readProgressPerRound - defines how often the mining progress is shown per round
 # (default:9)            thats the 'xx% done ...' info.
