--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-logging.level.burstcoin.jminer.core=INFO
 logging.level.org.eclipse.jetty.util.log=WARN
 logging.level.org.springframework=WARN
-logging.file=jminer.logs.txt
+spring.jmx.enabled=false
