--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>burstcoin</groupId>
     <artifactId>burstcoin-jminer</artifactId>
-    <version>0.4.4-SNAPSHOT</version>
+    <version>0.4.5-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>burstcoin-jminer</name>
@@ -14,7 +14,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.3.3.RELEASE</version>
+        <version>1.3.6.RELEASE</version>
         <relativePath/>
     </parent>
 
@@ -22,10 +22,10 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <start-class>burstcoin.jminer.JMinerApplication</start-class>
         <java.version>1.8</java.version>
-        <jetty.version>9.3.8.RC0</jetty.version>
-        <jocl.version>0.1.9</jocl.version>
+        <jetty.version>9.4.0.M0</jetty.version>
+        <jocl.version>2.0.0</jocl.version>
         <saphir-hash.version>3.0.1</saphir-hash.version>
-        <bcprov-jdk16.version>1.46</bcprov-jdk16.version>
+        <bcprov-jdk15on.version>1.54</bcprov-jdk15on.version>
     </properties>
 
     <dependencies>
@@ -36,9 +36,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.jocl</groupId>
-            <artifactId>jocl</artifactId>
-            <version>${jocl.version}</version>
+        <groupId>org.jocl</groupId>
+        <artifactId>jocl</artifactId>
+        <version>${jocl.version}</version>
         </dependency>
 
         <dependency>
@@ -55,8 +55,8 @@
 
         <dependency>
             <groupId>org.bouncycastle</groupId>
-            <artifactId>bcprov-jdk16</artifactId>
-            <version>${bcprov-jdk16.version}</version>
+            <artifactId>bcprov-jdk15on</artifactId>
+            <version>${bcprov-jdk15on.version}</version>
         </dependency>
 
         <dependency>
@@ -85,6 +85,23 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
         </dependency>
+
+        <!--<dependency>-->
+            <!--<groupId>org.jogamp.gluegen</groupId>-->
+            <!--<artifactId>gluegen-rt-main</artifactId>-->
+            <!--<version>2.3.1</version>-->
+        <!--</dependency>-->
+
+        <!--<dependency>-->
+            <!--<groupId>org.jogamp.jocl</groupId>-->
+            <!--<artifactId>jocl-main</artifactId>-->
+            <!--<version>2.3.1</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.jogamp.joal</groupId>-->
+            <!--<artifactId>joal-main</artifactId>-->
+            <!--<version>2.3.1</version>-->
+        <!--</dependency>-->
 
     </dependencies>
 
