extended 'listPlotFiles' feature to display chunks/drive seek and mined blocks per plot-file. added auto-build distribution zip-file on mvn package; new version 0.4.5-RELEASE;

--- a/jminer.default.properties
+++ b/jminer.default.properties
@@ -36,8 +36,8 @@
 # scanPathsEveryRound - optional 'true' will check 'plotPaths' for changed plot files on every round
 # (default:true)        'false' will check only on start/restart
 #
-# listPlotFiles       - optional ... list all plotFiles on start, e.g. to use https://bchain.info/BURST/tools/overlap
-# (default:false)
+# listPlotFiles       - optional ... list all plotFiles on start, If walletServer/soloServer is configured,
+# (default:false)       it will show mined blocks and drive seeks/chunks of plotfile, too.
 # -----------------------------------------------------------------------------------
 plotPaths=D:/,C:/,E:/plots,F:/plots
 scanPathsEveryRound=
