--- a/pom.xml
+++ b/pom.xml
@@ -1,157 +1,186 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0">
-    <modelVersion>4.0.0</modelVersion>
+  <modelVersion>4.0.0</modelVersion>
 
-    <groupId>burstcoin</groupId>
-    <artifactId>burstcoin-jminer</artifactId>
-    <version>0.4.5-SNAPSHOT</version>
-    <packaging>jar</packaging>
+  <groupId>burstcoin</groupId>
+  <artifactId>burstcoin-jminer</artifactId>
+  <version>0.4.5-RELEASE</version>
+  <packaging>jar</packaging>
 
-    <name>burstcoin-jminer</name>
+  <name>burstcoin-jminer</name>
 
-    <description>Burstcoin (BURST) - GPU assisted PoC-Miner</description>
+  <description>Burstcoin (BURST) - GPU assisted PoC-Miner</description>
 
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.3.6.RELEASE</version>
-        <relativePath/>
-    </parent>
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>1.3.6.RELEASE</version>
+    <relativePath/>
+  </parent>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <start-class>burstcoin.jminer.JMinerApplication</start-class>
-        <java.version>1.8</java.version>
-        <jetty.version>9.4.0.M0</jetty.version>
-        <jocl.version>2.0.0</jocl.version>
-        <saphir-hash.version>3.0.1</saphir-hash.version>
-        <bcprov-jdk15on.version>1.54</bcprov-jdk15on.version>
-    </properties>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <start-class>burstcoin.jminer.JMinerApplication</start-class>
+    <java.version>1.8</java.version>
+    <jetty.version>9.4.0.M0</jetty.version>
+    <jocl.version>0.1.9</jocl.version>
+    <saphir-hash.version>3.0.1</saphir-hash.version>
+    <bcprov-jdk15on.version>1.54</bcprov-jdk15on.version>
+  </properties>
 
-    <dependencies>
+  <dependencies>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter</artifactId>
+    </dependency>
 
-        <dependency>
-        <groupId>org.jocl</groupId>
-        <artifactId>jocl</artifactId>
-        <version>${jocl.version}</version>
-        </dependency>
+    <dependency>
+      <groupId>org.jocl</groupId>
+      <artifactId>jocl</artifactId>
+      <version>${jocl.version}</version>
+    </dependency>
 
-        <dependency>
-            <groupId>de.tynne</groupId>
-            <artifactId>saphir-hash-core</artifactId>
-            <version>${saphir-hash.version}</version>
-        </dependency>
+    <dependency>
+      <groupId>de.tynne</groupId>
+      <artifactId>saphir-hash-core</artifactId>
+      <version>${saphir-hash.version}</version>
+    </dependency>
 
-        <dependency>
-            <groupId>de.tynne</groupId>
-            <artifactId>saphir-hash-jca</artifactId>
-            <version>${saphir-hash.version}</version>
-        </dependency>
+    <dependency>
+      <groupId>de.tynne</groupId>
+      <artifactId>saphir-hash-jca</artifactId>
+      <version>${saphir-hash.version}</version>
+    </dependency>
 
-        <dependency>
-            <groupId>org.bouncycastle</groupId>
-            <artifactId>bcprov-jdk15on</artifactId>
-            <version>${bcprov-jdk15on.version}</version>
-        </dependency>
+    <dependency>
+      <groupId>org.bouncycastle</groupId>
+      <artifactId>bcprov-jdk15on</artifactId>
+      <version>${bcprov-jdk15on.version}</version>
+    </dependency>
 
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-client</artifactId>
-            <version>${jetty.version}</version>
-        </dependency>
+    <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-client</artifactId>
+      <version>${jetty.version}</version>
+    </dependency>
 
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-util</artifactId>
-            <version>${jetty.version}</version>
-        </dependency>
+    <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-util</artifactId>
+      <version>${jetty.version}</version>
+    </dependency>
 
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-core</artifactId>
-        </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-core</artifactId>
+    </dependency>
 
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-        </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+    </dependency>
 
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-annotations</artifactId>
-        </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
+    </dependency>
 
-        <!--<dependency>-->
-            <!--<groupId>org.jogamp.gluegen</groupId>-->
-            <!--<artifactId>gluegen-rt-main</artifactId>-->
-            <!--<version>2.3.1</version>-->
-        <!--</dependency>-->
+  </dependencies>
 
-        <!--<dependency>-->
-            <!--<groupId>org.jogamp.jocl</groupId>-->
-            <!--<artifactId>jocl-main</artifactId>-->
-            <!--<version>2.3.1</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>org.jogamp.joal</groupId>-->
-            <!--<artifactId>joal-main</artifactId>-->
-            <!--<version>2.3.1</version>-->
-        <!--</dependency>-->
+  <build>
 
-    </dependencies>
+    <resources>
+      <resource>
+        <directory>src/main/java</directory>
+        <includes>
+          <include>burstcoin/jminer/core/**/*.cl</include>
+        </includes>
+      </resource>
+      <resource>
+        <directory>src/main/resources</directory>
+        <includes>
+          <include>**/*.txt</include>
+          <include>**/*.properties</include>
+        </includes>
+      </resource>
+    </resources>
 
-    <build>
 
-        <resources>
-            <resource>
-                <directory>src/main/java</directory>
-                <includes>
-                    <include>burstcoin/jminer/core/**/*.cl</include>
-                </includes>
-            </resource>
-            <resource>
-                <directory>src/main/resources</directory>
-                <includes>
-                    <include>**/*.txt</include>
-                    <include>**/*.properties</include>
-                </includes>
-            </resource>
-        </resources>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>2.6</version>
 
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
+        <configuration>
+          <descriptorRefs>
+            <descriptorRef>jar-with-dependencies</descriptorRef>
+          </descriptorRefs>
+          <archive>
+            <manifest>
+              <mainClass>nxt.Nxt</mainClass>
+            </manifest>
+          </archive>
+        </configuration>
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>attach-sources</id>
-                        <goals>
-                            <goal>jar-no-fork</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+        <executions>
+          <execution>
+            <id>make-assembly</id>
+            <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <configuration>
-                    <show>private</show>
-                    <nohelp>true</nohelp>
-                </configuration>
-            </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <version>1.8</version>
+        <executions>
+          <execution>
+            <id>ant-clear</id>
+            <phase>prepare-package</phase>
+            <goals>
+              <goal>run</goal>
+            </goals>
+            <configuration>
+              <target>
+                <!-- clear dist dir -->
+                <delete dir="${project.basedir}/dist"/>
+                <mkdir dir="${project.basedir}/dist"/>
+                <mkdir dir="${project.basedir}/dist/tmp"/>
+              </target>
+            </configuration>
+          </execution>
+          <execution>
+            <id>ant-zip</id>
+            <phase>package</phase>
+            <goals>
+              <goal>run</goal>
+            </goals>
+            <configuration>
+              <target>
+                <move file="${project.basedir}/target/${project.build.finalName}-jar-with-dependencies.jar"
+                      tofile="${project.basedir}/dist/tmp/${project.build.finalName}.jar"/>
 
-        </plugins>
-    </build>
+                <copy file="${project.basedir}/jminer.default.properties" tofile="${project.basedir}/dist/tmp/jminer.properties"/>
+                <copy file="${project.basedir}/LICENSE.md" tofile="${project.basedir}/dist/tmp/LICENSE.txt"/>
+                <copy file="${project.basedir}/README.md" tofile="${project.basedir}/dist/tmp/README.txt"/>
+                <copy file="${project.basedir}/run.bat" tofile="${project.basedir}/dist/tmp/run.sh"/>
+                <copy file="${project.basedir}/run.bat" tofile="${project.basedir}/dist/tmp/run.bat"/>
+
+                <!-- create zip file -->
+                <zip destfile="${project.basedir}/dist/${project.build.finalName}.zip" basedir="${project.basedir}/dist/tmp"/>
+              </target>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
+    </plugins>
+  </build>
 
 </project>
