fixed c&p issue with main class in mvn/ant build

--- a/pom.xml
+++ b/pom.xml
@@ -119,7 +119,7 @@
           </descriptorRefs>
           <archive>
             <manifest>
-              <mainClass>nxt.Nxt</mainClass>
+              <mainClass>burstcoin.jminer.JMinerApplication</mainClass>
             </manifest>
           </archive>
         </configuration>
