--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>burstcoin</groupId>
   <artifactId>burstcoin-jminer</artifactId>
-  <version>0.4.5-RELEASE</version>
+  <version>0.4.6-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>burstcoin-jminer</name>
@@ -23,7 +23,7 @@
     <start-class>burstcoin.jminer.JMinerApplication</start-class>
     <java.version>1.8</java.version>
     <jetty.version>9.4.0.M0</jetty.version>
-    <jocl.version>0.1.9</jocl.version>
+    <jocl.version>2.0.0</jocl.version>
     <saphir-hash.version>3.0.1</saphir-hash.version>
     <bcprov-jdk15on.version>1.54</bcprov-jdk15on.version>
   </properties>
