--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>1.3.6.RELEASE</version>
+    <version>1.3.8.RELEASE</version>
     <relativePath/>
   </parent>
 
@@ -22,10 +22,10 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <start-class>burstcoin.jminer.JMinerApplication</start-class>
     <java.version>1.8</java.version>
-    <jetty.version>9.4.0.M0</jetty.version>
+    <jetty.version>9.4.0.RC2</jetty.version>
     <jocl.version>2.0.0</jocl.version>
     <saphir-hash.version>3.0.1</saphir-hash.version>
-    <bcprov-jdk15on.version>1.54</bcprov-jdk15on.version>
+    <bcprov-jdk15on.version>1.55</bcprov-jdk15on.version>
   </properties>
 
   <dependencies>
