- updated libs (spring boot 1.3.8 -> 1.4.3) - prevent print useless exception info - replaced maven assembly plugin

--- a/jminer.default.properties
+++ b/jminer.default.properties
@@ -89,7 +89,7 @@ numericAccountId=xxxxxxxxxxxxxxx
 poolServer=http://pool.com
 
 # Winner
-walletServer=https://wallet.burst-team.us:8125
+walletServer=https://wallet.burst-team.us
 winnerRetriesOnAsync=
 winnerRetryIntervalInMs=
 
