--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>1.3.8.RELEASE</version>
+    <version>1.4.3.RELEASE</version>
     <relativePath/>
   </parent>
 
@@ -22,10 +22,10 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <start-class>burstcoin.jminer.JMinerApplication</start-class>
     <java.version>1.8</java.version>
-    <jetty.version>9.4.0.RC2</jetty.version>
+    <jetty.version>9.4.0.v20161208</jetty.version>
     <jocl.version>2.0.0</jocl.version>
     <saphir-hash.version>3.0.1</saphir-hash.version>
-    <bcprov-jdk15on.version>1.55</bcprov-jdk15on.version>
+    <bcprov-jdk15on.version>1.56</bcprov-jdk15on.version>
   </properties>
 
   <dependencies>
@@ -108,31 +108,10 @@
 
 
     <plugins>
+
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-assembly-plugin</artifactId>
-        <version>2.6</version>
-
-        <configuration>
-          <descriptorRefs>
-            <descriptorRef>jar-with-dependencies</descriptorRef>
-          </descriptorRefs>
-          <archive>
-            <manifest>
-              <mainClass>burstcoin.jminer.JMinerApplication</mainClass>
-            </manifest>
-          </archive>
-        </configuration>
-
-        <executions>
-          <execution>
-            <id>make-assembly</id>
-            <phase>package</phase>
-            <goals>
-              <goal>single</goal>
-            </goals>
-          </execution>
-        </executions>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
 
       <plugin>
@@ -163,9 +142,7 @@
             </goals>
             <configuration>
               <target>
-                <move file="${project.basedir}/target/${project.build.finalName}-jar-with-dependencies.jar"
-                      tofile="${project.basedir}/dist/tmp/${project.build.finalName}.jar"/>
-
+                <copy file="${project.basedir}/target/${project.build.finalName}.jar" tofile="${project.basedir}/dist/tmp/${project.build.finalName}.jar"/>
                 <copy file="${project.basedir}/jminer.default.properties" tofile="${project.basedir}/dist/tmp/jminer.properties"/>
                 <copy file="${project.basedir}/LICENSE.md" tofile="${project.basedir}/dist/tmp/LICENSE.txt"/>
                 <copy file="${project.basedir}/README.md" tofile="${project.basedir}/dist/tmp/README.txt"/>
