- new version 0.4.8-RELEASE - made triggerServer on solo optional and disabled by default (prevent annoying error logs on busy server) - using haitch suggestion for fallback on calculate parts https://forums.burst-team.us/topic/3600/part-calculation-algorithm-for-jminer/14

--- a/jminer.default.properties
+++ b/jminer.default.properties
@@ -109,10 +109,14 @@ devPoolCommitsPerRound=
 #
 # targetDeadline          - min. deadline to be committed. e.g. 750000
 # (optinal)
+#
+# triggerServer           - emulates open wallet, to prevent it from
+# (default: false)          falling asleep (not sure if needed at all)
 # -----------------------------------------------------------------------------------
 soloServer=http://localhost:8125
 passPhrase=xxxxxxxxxxxxxx
 targetDeadline=
+triggerServer=
 
 # -----------------------------------------------------------------------------------
 # - OpenCL -----------------------------------------------------------------------------
