- new version 0.4.9-SNAPSHOT - added 'showSkippedDeadlines' property - improved logging on commit pool nonce - bugfix on assign bestCommittedDeadline - updated to latest libs

--- a/jminer.default.properties
+++ b/jminer.default.properties
@@ -93,7 +93,7 @@ walletServer=https://wallet.burst-team.us
 winnerRetriesOnAsync=
 winnerRetryIntervalInMs=
 
-# devPool
+# devPool (DevPool http://178.62.39.204:8121 seams no longer available?! Miner support will be removed in future versions.)
 devPool=
 devPoolCommitsPerRound=
 
@@ -173,10 +173,14 @@ logFilePath=
 #
 # showDriveInfo        - set this to 'true' to show info about every drive on finish reading it,
 # (default:false)        this is useful to find the slow ones ... can help to optimize your setup.
+#
+# showSkippedDeadlines - set this to 'true' to show found deadlines below targetDeadline from
+# (default:true)         this config or provided by pool (overwriting the targetDeadline specified in here)
 # -----------------------------------------------------------------------------------
 readProgressPerRound=
 byteUnitDecimal=
 showDriveInfo=
+showSkippedDeadlines=
 
 # -----------------------------------------------------------------------------------
 # - MINING ENGINE - MEMORY USAGE ----------------------------------------------------
