- updated libs - added solo mining property 'recommitDeadlines'

--- a/jminer.default.properties
+++ b/jminer.default.properties
@@ -97,11 +97,16 @@ winnerRetryIntervalInMs=
 #
 # triggerServer           - emulates open wallet, to prevent it from
 # (default: false)          falling asleep (not sure if needed at all)
+#
+# recommitDeadlines       - recommits deadlines below 1200 3 times in a interval of 5 sec.
+# (default: false)          experimental feature to increase chance that deadline gets propagated
+#                           e.g. on short disconnect or connected peers busy etc.
 # -----------------------------------------------------------------------------------
 soloServer=http://localhost:8125
 passPhrase=xxxxxxxxxxxxxx
 targetDeadline=
 triggerServer=
+recommitDeadlines=
 
 # -----------------------------------------------------------------------------------
 # - OpenCL -----------------------------------------------------------------------------
