- fixed issue with https connections - added properties to modify console and file log pattern - new version 0.4.11-SNAPSHOT

--- a/jminer.default.properties
+++ b/jminer.default.properties
@@ -144,6 +144,11 @@ deviceId=
 #
 # logFilePath        - path (filename and optional directory, relative to miner location)
 # (default:log/jminer.log.txt)
+#
+# logPatternConsole  - only needed if you want to configure your own log pattern e.g.:
+# logPatternFile       %blue(%d{HH:mm:ss.SSS}) %green(%msg%n)
+#                      would only show colored time and message
+#                      Docs: https://logback.qos.ch/manual/layouts.html#ClassicPatternLayout
 # -----------------------------------------------------------------------------------
 refreshInterval=2000
 connectionTimeout=12000
@@ -151,6 +156,8 @@ connectionTimeout=12000
 debug=
 writeLogFile=
 logFilePath=
+logPatternConsole=
+logPatternFile=
 
 # -----------------------------------------------------------------------------------
 # - MINING ENGINE - APPEARANCE / BEHAVIOR -------------------------------------------
