added restart round on changed miningInfo for same blockheight (optional feature) can be disabled by updateMiningInfo=false

--- a/jminer.default.properties
+++ b/jminer.default.properties
@@ -131,6 +131,10 @@ deviceId=
 # refreshInterval    - interval of asking wallet/pool for mining info (in ms),
 # (default:2000)       to check for new block
 #
+# updateMiningInfo   - restart round on new generationSignature for same round
+# (default=true)       as long as equal miningInfo was not already finished
+#                      (it may happen that miningInfo changes, and changes back later)
+#
 # connectionTimeout  - increase the 'connectionTimeout' on network problems.
 # (default:12000)      this timeout is used for all network requests.
 #                      if you use pool or online-wallet, the 12 sec. default may
@@ -151,6 +155,7 @@ deviceId=
 #                      Docs: https://logback.qos.ch/manual/layouts.html#ClassicPatternLayout
 # -----------------------------------------------------------------------------------
 refreshInterval=2000
+updateMiningInfo=true
 connectionTimeout=12000
 
 debug=
