allow the client to force use of its own targetDeadline
makes it compatible with the new PoCC v3 pools because they make miners
specify their own targets - definitely a hack.  Love, Crypto Froggie.

--- a/jminer.default.properties
+++ b/jminer.default.properties
@@ -48,8 +48,12 @@ listPlotFiles=
 # -----------------------------------------------------------------------------------
 # poolMining             - 'true' for pool mining, 'false' for solo mining.
 # (default:true)            ensure to configure the chosen mining-mode below.
+
+# forceLocalTargetDeadline - 'true' will force jminer to use the targetDeadline specified below, 
+# (default:false)            even if the pool says otherwise.  Only for pool mining! 'false' uses the default behavior for targetDeadline.
 # -----------------------------------------------------------------------------------
 poolMining=
+forceLocalTargetDeadline=
 
 # -----------------------------------------------------------------------------------
 # - MINING MODE - POOL ---------------------------------- ONLY NEEDED 4 POOL MINING -
