#57 add option for dynamic targetDeadline in case of PoCC pool

--- a/jminer.default.properties
+++ b/jminer.default.properties
@@ -44,16 +44,27 @@ scanPathsEveryRound=
 listPlotFiles=
 
 # -----------------------------------------------------------------------------------
-# - MINING MODE ---------------------------------------------------------------------
+# - MINING MODE AND TARGET DEADLINE -------------------------------------------------
 # -----------------------------------------------------------------------------------
 # poolMining             - 'true' for pool mining, 'false' for solo mining.
 # (default:true)            ensure to configure the chosen mining-mode below.
-
+#
+# targetDeadline          - min. deadline to be committed. e.g. 750000 for solo mining.
+# (optinal)                 will be used for pool mining if 'forceLocalTargetDeadline=true'
+#
 # forceLocalTargetDeadline - 'true' will force jminer to use the targetDeadline specified below, 
 # (default:false)            even if the pool says otherwise.  Only for pool mining! 'false' uses the default behavior for targetDeadline.
+#                            https://www.youtube.com/watch?v=9lwogE31SiI
+#
+# dynamicTargetDeadline    - 'true' will overrule 'targetDeadline' and 'forceLocalTargetDeadline' settings.
+# (default:false)            the miner will calculate the targetDeadline dynamic on poolMining:
+#                            'targetDL = 720 * netDiff / plotSizeInTB' where 'netDiff = 18325193796 / baseTarget'
 # -----------------------------------------------------------------------------------
 poolMining=
+
+targetDeadline=
 forceLocalTargetDeadline=
+dynamicTargetDeadline=
 
 # -----------------------------------------------------------------------------------
 # - MINING MODE - POOL ---------------------------------- ONLY NEEDED 4 POOL MINING -
@@ -96,9 +107,6 @@ winnerRetryIntervalInMs=
 # passPhrase              - secretPhrase/password of solo mining burst-account
 # (required for solo)
 #
-# targetDeadline          - min. deadline to be committed. e.g. 750000
-# (optinal)
-#
 # triggerServer           - emulates open wallet, to prevent it from
 # (default: false)          falling asleep (not sure if needed at all)
 #
@@ -108,7 +116,6 @@ winnerRetryIntervalInMs=
 # -----------------------------------------------------------------------------------
 soloServer=http://localhost:8125
 passPhrase=xxxxxxxxxxxxxx
-targetDeadline=
 triggerServer=
 recommitDeadlines=
 
